# SOEN341

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  package-lock.json  pyproject.toml  requirements.txt
.github/workflows/: django.yml
amazon/amazon/: asgi.py  settings.py  urls.py  wsgi.py
amazon/backend/: asgi.py  settings.py  urls.py  wsgi.py
amazon/frontend/: package-lock.json  package.json
amazon/frontend/src/: App.css  App.js  App.test.js  index.js  store.js
amazon/frontend/src/actions/: ShippingActions.js  cartActions.js  categoryActions.js  entertainmentProductsActions.js  fitnessProductsActions.js  gamingProductsActions.js  lifestyleProductsActions.js  medicalProductsAnimals.js  orderActions.js  petsProductsActions.js  productActions.js  searchAction.js  userActions.js
amazon/frontend/src/components/: Button.js  Cards.js  CheckoutSteps.js  Footer.css  Footer.js  FormContainer.js  HPCenter.css  HPCenter.js  Loader.js  Message.js  Navbar.js  Product.js  ProductCards.js
amazon/frontend/src/constants/: constants.js
amazon/model_api/: admin.py  apps.py  forms.py  models.py  products.py  serializers.py  test.py  tests.py  urls.py  views.py
amazon/model_api/fixtures/: products.json
amazon/model_api/migrations/: 0001_initial.py  0002_alter_product_price.py  0002_rename_storeadmin_storeowner.py  0003_alter_product_price.py  0003_remove_client_userid.py  0004_remove_order_created_remove_order_id_and_more.py  0005_remove_order_datetimecreated_alter_order__id_and_more.py  0006_order_datetimecreated.py  0007_remove_order_datetimecreated.py
(+38 files in other folders)
